[gd_scene load_steps=6 format=3 uid="uid://c0rp7ga7umiff"]

[ext_resource type="Texture2D" uid="uid://cgi83bss6t4fn" path="res://icon.svg" id="1_y2kgo"]
[ext_resource type="Script" path="res://Mechanics/finished_product.gd" id="2_m55r6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxfdq"]
size = Vector2(160, 159.735)

[sub_resource type="Animation" id="Animation_iunwm"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(533, 543), Vector2(533, 486), Vector2(533, 415.5), Vector2(533, 348.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h12kr"]
_data = {
"new_animation": SubResource("Animation_iunwm")
}

[node name="finished_product" type="Sprite2D"]
position = Vector2(533, 543)
scale = Vector2(1, 0.945313)
texture = ExtResource("1_y2kgo")
script = ExtResource("2_m55r6")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 0.528687)
shape = SubResource("RectangleShape2D_sxfdq")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h12kr")
}

[node name="Button" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -63.0
offset_right = -63.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="label" type="Label" parent="."]
visible = false
offset_left = 74.0
offset_top = -57.0
offset_right = 248.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33
text = "potion of heal"

[connection signal="mouse_entered" from="hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_exited" from="label" to="." method="_on_label_mouse_exited"]
